--- a/api-gateway/sonar-project.properties
+++ b/api-gateway/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.host.url=http://localhost:9000
-sonar.login=demo
+sonar.login=admin
 sonar.password=admin1
 # Project identification
 sonar.projectKey=api-gateway 
